# load_validation_tool_v2

./: .env  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd-pipeline-lab.yml
example/: demo_GUI_final_v2.py  demo_calc_TI.py  demo_calc_shear.py  plot_result.py
src/: __init__.py
src/LoadValidationTool/processor/: __init__.py  bin_wdir.py  calc_shear_simple.py
src/LoadValidationTool/utils/: __init__.py
src/data_readers/: read_LiDAR_data.py  read_MetMast_data.py  read_mat_data.py
src/load_validation_tool/data_readers/: __init__.py  read_LiDAR_data.py  read_MetMast_data.py  read_mat_data.py
src/load_validation_tool/processor/: airDensity_func.py  calc_TI.py  calc_shear_simple.py
src/load_validation_tool/utils/: utils.py
src/processor/: airDensity_func.py  bin_wind.py
tests/: test_read_lidar.py
tests/metmast_data/: cesar_tower_meteo_lb1_t10_v1.2_202005.nc
