[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "load_validation_tool"
version = "0.9.0"
description = "Wind turbine load validation and data processing tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
	"plotly",
	"seaborn",
    "pandas",
    "matplotlib",
	"streamlit",
	"scipy",
	"xarray",
]
[tool.setuptools.packages.find]
where = ["src"]
